[project]
name = "volatility-harvesting"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.12.14",
    "bcrypt>=4.0.0",
    "dotenv>=0.9.9",
    "faker>=22.0.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 10
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
]
