[project]
name = "volatility-harvesting"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.12.14",
    "bcrypt>=4.0.0",
    "dotenv>=0.9.9",
    "faker>=22.0.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.32.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

# [tool.ruff.lint]
# select = [
#     "E",  # pycodestyle errors
#     "W",  # pycodestyle warnings
#     "F",  # pyflakes
#     "I",  # isort
#     "B",  # flake8-bugbear
#     "C4",  # flake8-comprehensions
#     "UP",  # pyupgrade
#     "ARG001", # unused arguments in functions
#     "T201",   # print statements are not allowed
# ]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]